--- a/aftman.toml
+++ b/aftman.toml
@@ -4,3 +4,5 @@
 # To add a new tool, add an entry to this table.
 [tools]
 rojo = "rojo-rbx/rojo@7.2.1"
+wally = "upliftgames/wally@0.3.1"
+selene = "kampfkarren/selene@0.25.0"
