--- a/wally.toml
+++ b/wally.toml
@@ -1,10 +1,10 @@
 [package]
-name = "nexure/roact-animation"
+name = "nexure/react-animation"
 version = "0.1.1"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Roact = "core-packages/roact-compat@17.0.1-rc.16.1"
+React = "core-packages/roact-compat@17.0.1-rc.16.1"
 Promise = "evaera/promise@4.0.0"
 
